# FreeCAD_sf_master

./: .gitignore  CMakeLists.txt  FreeCAD.files  FreeCAD.includes
src/App/: Application.cpp
src/Gui/: Document.cpp  View3DInventor.cpp  View3DInventor.h  View3DInventorViewer.cpp  WidgetFactory.cpp
src/Mod/: CMakeLists.txt
src/Mod/Cam2/: InitGui.py  ToolPathPrimitives.txt
src/Mod/Cam2/App/: AppCam.cpp  AppCamPy.cpp  CMakeLists.txt  CamManager.cpp  CamManager.h  GCode.cpp  GCode.h  ItemList.cpp  ItemList.h  LinuxCNC.cpp  LinuxCNC.h  MachineProgram.cpp  MachineProgram.h  PostProcessor.cpp  PostProcessor.h  PreCompiled.cpp  PreCompiled.h  PyCam.py  Support.cpp  Support.h  TPGFeature.cpp
src/Mod/Cam2/App/Features/: CamFeature.cpp  CamFeature.h  CamPartsList.cpp  CamSettingsableFeature.cpp  CamSettingsableFeature.h  Feature.cpp  GCodeFeature.cpp  MachineFeature.cpp  MachineFeature.h  MachineProgramFeature.cpp  MachineProgramFeature.h  StockGeometry.cpp  TPGFeature.cpp  TPGFeature.h  TPGList.cpp  TPGList.h  ToolFeature.cpp  ToolFeature.h  ToolPathFeature.cpp  ToolPathFeature.h
src/Mod/Cam2/App/Graphics/: CDouble.h  Paths.cpp  Paths.h
src/Mod/Cam2/App/Libs/libarea-clipper/: Arc.cpp  Arc.h  Area.cpp  Area.h  AreaClipper.cpp  AreaDxf.cpp  AreaDxf.h  AreaOrderer.cpp  AreaOrderer.h  AreaPocket.cpp  Box.h  CMakeLists.txt  Circle.cpp  Circle.h  Curve.cpp  Curve.h  Point.h  PythonStuff.cpp  dxf.cpp  dxf.h
src/Mod/Cam2/App/Libs/libarea-clipper/clipper/: clipper.cpp  clipper.hpp
src/Mod/Cam2/App/Libs/libarea-clipper/kurve/: geometry.h
src/Mod/Cam2/App/Plugins/: CMakeLists.txt  MyPlugin.cpp  MyPlugin.h
src/Mod/Cam2/App/Plugins/TestPlugin/: CMakeLists.txt  CppExampleTPG.cpp  CppExampleTPG.h
src/Mod/Cam2/App/PyPostProcessor/: PostProcessorAPI.py  TestPostProcessor.py
src/Mod/Cam2/App/PyPostProcessor/PostProcessor/: area_funcs.py  format.py  hm50.py  iso.py  kurve_funcs.py  linuxcnc.py  mach3.py  nc.py
src/Mod/Cam2/App/PyTPG/: __init__.py
src/Mod/Cam2/App/PyTPG/ExampleTPG/: ExampleTPG.py  SecondPyTPG.py  __init__.py
src/Mod/Cam2/App/PyTPG/ProfileMilling/: ProfileMilling.py  __init__.py  format.py  newnc.py  profile_funcs.py  simple_nc.py  test.py
src/Mod/Cam2/App/TPG/: CppTPG.cpp  CppTPG.h  CppTPGDescriptor.cpp  CppTPGDescriptor.h  CppTPGDescriptorWrapper.cpp  CppTPGDescriptorWrapper.h  CppTPGFactory.cpp  CppTPGFactory.h  CppTPGPlugin.cpp  CppTPGPlugin.h  CppTPGWrapper.cpp  CppTPGWrapper.h  PyTPGDescriptor.cpp  PyTPGDescriptor.h  PyTPGFactory.cpp  PyTPGFactory.h  PyTPGSettings.cpp  PyTPGSettings.h  PyToolPath.cpp  PyToolPath.h  TPG.cpp  TPG.h  TPGCache.cpp  TPGCollection.cpp  TPGCollection.h  TPGDescriptor.cpp  TPGDescriptor.h  TPGDescriptorCollection.cpp  TPGDescriptorCollection.h  TPGFactory.cpp  TPGFactory.h  TPGLib.cpp  TPGLib.h  TPGProcess.cpp  TPGProcess.h  TPGPython.cpp  TPGPython.h  TPGSettings.cpp  TPGSettings.h  ToolPath.cpp  (+1 more)
src/Mod/Cam2/Gui/: AppCamGui.cpp  CMakeLists.txt  CamInspectorDockWindow.cpp  CamInspectorDockWindow.h  CamProjectDockWindow.cpp  CamProjectDockWindow.h  CamProjectDockWindow.ui  CamProjectDockWindowComponents.cpp  CamProjectDockWindowComponents.h  Command.cpp  MachineProgramDockWindow.cpp  MachineProgramDockWindow.h  MachineProgramDockWindow.ui  PreCompiled.cpp  PreCompiled.h  TPGLibraryDockWindow.cpp  TPGListModel.cpp  TPGListModel.h  ToolPathDockWindow.cpp  ToolPathDockWindow.h  ToolpathDockWindow.cpp  ToolpathDockWindow.h  ToolpathDockWindow.ui  UIManager.cpp  UIManager.h  ViewProviderCamFeature.cpp  ViewProviderCamFeature.h  ViewProviderCamPartsList.cpp  ViewProviderCamPartsList.h  ViewProviderGCodeFeature.cpp  ViewProviderMachineFeature.cpp  ViewProviderMachineFeature.h  ViewProviderMachineProgramFeature.cpp  ViewProviderMachineProgramFeature.h  ViewProviderStockGeometry.cpp  ViewProviderTPGFeature.cpp  ViewProviderTPGFeature.h  ViewProviderTPGList.cpp  ViewProviderToolFeature.cpp  ViewProviderToolFeature.h  (+3 more)
src/Mod/Cam2/Gui/Resources/: Cam.qrc
src/Mod/Cam2/Gui/TaskDialog/: TaskDlgEditCamFeature.cpp  TaskDlgEditCamPartsList.cpp  TaskDlgEditStockGeometry.cpp  TaskDlgEditTPGFeature.cpp
src/Mod/Drawing/App/: AppDrawing.cpp  AppDrawingPy.cpp  CMakeLists.txt  DrawingExport.cpp  DrawingExport.h  FeatureClip.cpp  FeatureDrawingPage.cpp  FeatureDrawingPage.h  FeatureOrthoView.cpp  FeatureOrthoView.h  FeaturePage.cpp  FeaturePage.h  FeatureParametricTemplate.cpp  FeatureParametricTemplate.h  FeatureParametricTemplatePy.xml  FeatureParametricTemplatePyImp.cpp  FeatureProjection.cpp  FeatureSVGTemplate.cpp  FeatureSVGTemplate.h  FeatureTemplate.cpp  FeatureTemplate.h  FeatureTemplatePy.xml  FeatureTemplatePyImp.cpp  FeatureView.cpp  FeatureView.h  FeatureViewAnnotation.cpp  FeatureViewAnnotation.h  FeatureViewCollection.cpp  FeatureViewCollection.h  FeatureViewDimension.cpp  FeatureViewDimension.h  FeatureViewOrthographic.cpp  FeatureViewOrthographic.h  FeatureViewPart.cpp  FeatureViewPart.h  FeatureViewSection.cpp  FeatureViewSection.h  Geometry.cpp  Geometry.h  GeometryObject.cpp  (+4 more)
src/Mod/Drawing/Gui/: AppDrawingGui.cpp  AppDrawingGuiPy.cpp  CMakeLists.txt  CanvasView.cpp  CanvasView.h  Command.cpp  CommandCreateDims.cpp  DrawingView.cpp  DrawingView.h  QGraphicsItemArrow.cpp  QGraphicsItemArrow.h  QGraphicsItemDrawingTemplate.cpp  QGraphicsItemDrawingTemplate.h  QGraphicsItemEdge.cpp  QGraphicsItemEdge.h  QGraphicsItemFace.cpp  QGraphicsItemFace.h  QGraphicsItemSVGTemplate.cpp  QGraphicsItemSVGTemplate.h  QGraphicsItemTemplate.cpp  QGraphicsItemTemplate.h  QGraphicsItemVertex.cpp  QGraphicsItemVertex.h  QGraphicsItemView.cpp  QGraphicsItemView.h  QGraphicsItemViewCollection.cpp  QGraphicsItemViewCollection.h  QGraphicsItemViewDimension.cpp  QGraphicsItemViewDimension.h  QGraphicsItemViewOrthographic.cpp  QGraphicsItemViewOrthographic.h  QGraphicsItemViewPart.cpp  QGraphicsItemViewPart.h  QGraphicsItemViewSection.cpp  QGraphicsItemViewSection.h  (+23 more)
src/Mod/Fem/: MechanicalAnalysis.py  MechanicalMaterial.py
src/Mod/Measure/: CMakeLists.txt
src/Mod/Spreadsheet/: CMakeLists.txt  Init.py  InitGui.py  Spreadsheet.py  Spreadsheet_rc.py
(+31 files in other folders)
